# emscripten

./: .clang-format  .clang-format-ignore  .coveragerc  .editorconfig  .eslintrc.yml  .flake8  .flake8_clean  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .mypy.ini  .prettierrc.yml  .project  .style.yapf  .travis.yml  AUTHORS  AUTHORS.txt  Binary search  CONTRIBUTING.markdown  CONTRIBUTING.md  ChangeLog  ChangeLog.markdown  ChangeLog.md  Directory.Build.props  Directory.Build.targets  Dockerfile  LICENSE  Makefile  NuGet.config  README  README.markdown  README.md  README.txt  SECURITY.md  a.out  a.out.js  a.out.wasm  bootstrap  bootstrap.bat  (+93 more)
test/cmake/cxx_import_std/: CMakeLists.txt  main.cpp
test/cmake/find_modules/: CMakeLists.txt  test.c  test_sdl3.c
test/cmake/find_package/: CMakeLists.txt  bar.cpp
test/cmake/find_pkg_config/: CMakeLists.txt
test/cmake/install_lib/: CMakeLists.txt  FooConfig.cmake
test/cmake/static_lib/: CMakeLists.txt  lib.cpp
test/minimal_webgl/: CMakeLists.txt  library_js.js  main.c  webgl.c
tests/box2d/Box2D/: Box2DConfig.cmake  CMakeLists.txt
tests/box2d/Testbed/: CMakeLists.txt
tests/box2d/freeglut/: CMakeLists.txt  COPYING  freeglut_callbacks.c  freeglut_ext.c  freeglut_font.c  freeglut_font_data.c  freeglut_glutfont_definitions.c  freeglut_internal.h  freeglut_joystick.c  freeglut_misc.c  freeglut_std.h  freeglut_structure.c  freeglut_teapot.c  freeglut_teapot_data.h  freeglut_videoresize.c  freeglut_window.c
tests/box2d/glui/: CMakeLists.txt  arcball.cpp  glui.cpp  glui.h  glui_bitmap_img_data.cpp  glui_column.cpp  glui_internal_control.h  glui_list.cpp  glui_mouse_iaction.cpp  glui_radio.cpp  glui_rotation.cpp  glui_spinner.cpp  glui_string.cpp  glui_textbox.cpp  glui_treepanel.cpp  glui_window.cpp  quaternion.h  readme.txt
tests/bullet/: CMakeLists.txt  Makefile.in  config.h.in  configure  libBullet.ll.tar.bz2  libBullet.names  libBullet.namespace  ltmain.sh  output.txt  output2.txt  output4.txt  readme.txt
tests/bullet/Extras/: CMakeLists.txt
tests/bullet/src/: Bullet-C-Api.h  CMakeLists.txt  btBulletCollisionCommon.h  btBulletDynamicsCommon.h
tests/cmake/check_c_source_runs/: CMakeLists.txt  main.cpp
tests/cmake/find_modules/: CMakeLists.txt  test.c
tests/cmake/post_build/: CMakeLists.txt
tests/cmake/stdproperty/: CMakeLists.txt  main.cpp
tests/cmake/target_html/: CMakeLists.txt
tests/cmake/target_js/: CMakeLists.txt  main.cpp  out.txt  postjs.js
tests/enet/: ChangeLog  Doxyfile  LICENSE  Makefile.in  callbacks.c  compress.c  configure.ac  design.txt  host.c  list.c  ltmain.sh  packet.c  protocol.c  unix.c  win32.c
tests/freealut/: CMakeLists.txt  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure.ac
tests/freealut/admin/: Makefile.in
tests/freealut/examples/: Makefile.am  hello_world.c  playfile.c
tests/freealut/src/: Makefile.am  README  alutCodec.c  alutError.c  alutInit.c  alutInputStream.c  alutOutputStream.c  alutUtil.c  alutVersion.c
tests/freealut/test_suite/: test_version.c
tests/freetype-js-port/: CMakeLists.txt  ChangeLog  ChangeLog.20  ChangeLog.21  ChangeLog.22  ChangeLog.23  ChangeLog.24  ChangeLog.25  Jamfile  Jamrules  Makefile  README  README.git  autogen.sh  configure  freetype.html  freetype.js  freetype.js.mem  main.c  modules.cfg  vms_make.com
tests/freetype-js-port/builds/: detect.mk  exports.mk  freetype.mk  link_dos.mk  link_std.mk  modules.mk  toplevel.mk
tests/freetype-js-port/devel/: ft2build.h  ftoption.h
tests/freetype-js-port/docs/: CHANGES  CUSTOMIZE  DEBUG  INSTALL  INSTALL.ANY  INSTALL.CROSS  INSTALL.GNU  INSTALL.UNIX  INSTALL.VMS  TODO  formats.txt  freetype-config.1  raster.txt  release
tests/freetype-js-port/include/: ft2build.h
tests/freetype-js-port/objs/: autofit.lo  cff.lo  ftbase.lo  ftbbox.lo  ftbitmap.lo  ftdebug.lo  ftglyph.lo  ftinit.lo  ftmodule.h  ftstroke.lo  ftsystem.lo  libfreetype.la  psaux.lo  pshinter.lo  psnames.lo  raster.lo  sfnt.lo  smooth.lo  truetype.lo
tests/minimal_webgl/: CMakeLists.txt  library_js.js  main.cpp  webgl.c  webgl.h
tests/openjpeg/: CMakeLists.txt  LibOpenJPEG.dsp  LibOpenJPEG.dsw  Makefile.nix  OpenJPEG.rc  readme.txt
tests/openjpeg/codec/: CMakeLists.txt  convert.c  convert.h  j2k_dump.c  j2k_to_image.c  j2k_to_image.dsp  j2k_to_image.sln
tests/openjpeg/common/: color.c  format_defs.h
tests/openjpeg/doc/: CMakeLists.txt
tests/openjpeg/libopenjpeg/: bio.h  cio.c  cio.h  dwt.c  event.c  image.c  image.h  j2k.c  j2k_lib.c  j2k_lib.h  jp2.c  jp2.h  mqc.c  opj_malloc.h  pi.c  raw.c  t1.c  t1_luts.h  t2.c  tcd.c
tests/poppler/: CMakeLists.txt  ChangeLog  ConfigureChecks.cmake  Makefile.am  Makefile.in  NEWS  README  README-XPDF  TODO  aclocal.m4  config.h.cmake  config.h.in  configure  configure.ac  gtk-doc.make  ltmain.sh  poppler-cairo.pc.cmake  poppler-cairo.pc.in  poppler-cpp-uninstalled.pc.in  poppler-glib-uninstalled.pc.in  poppler-glib.pc.cmake  poppler-glib.pc.in  poppler-qt5-uninstalled.pc.in  poppler-qt5.pc.cmake  poppler-qt5.pc.in  poppler-splash-uninstalled.pc.in  readme.txt  ref.ppm
tests/poppler/cpp/: CMakeLists.txt  Makefile.am  Makefile.in  poppler-document-private.h  poppler-document.cpp  poppler-embedded-file-private.h  poppler-embedded-file.cpp  poppler-global.cpp  poppler-image.cpp  poppler-page-renderer.cpp  poppler-page-transition.cpp  poppler-page.cpp  poppler-private.cpp  poppler-private.h  poppler-rectangle.cpp  poppler-rectangle.h  poppler-version.h
tests/poppler/fofi/: FoFiBase.cc  FoFiBase.h  FoFiEncodings.cc  FoFiEncodings.h  FoFiIdentifier.cc  FoFiIdentifier.h  FoFiTrueType.cc  (+7 more)
tools/emcc_native/: CMakeLists.txt  README.md  benchmark.py  config.cpp  config.h  driver.cpp  driver.h  exec.cpp  exec.h  gen_settings.py  generated_settings.h  main.cpp
tools/optimizer/: CMakeLists.txt  asm2wasm.cpp  asm2wasm.h  colors.h  istring.cpp  istring.h  minijson.h  optimizer-main.cpp  optimizer-shared.cpp  optimizer.cpp  optimizer.h  parser.cpp  parser.h  simple_ast.cpp  simple_ast.h  snprintf.h  wasm.h
tools/websocket_to_posix_proxy/: CMakeLists.txt
(+11177 files in other folders)
